--- a/sass/_index.sass
+++ b/sass/_index.sass
@@ -11,7 +11,7 @@
 
 html,body 
 	width: 100%
-	height: 100%
+	height: 100% 
 
 
 =fullPage 
@@ -159,8 +159,8 @@ html,body
 		width: 100%
 		top: 0px
 		left: 0
-		+bgi('top.png')
-		height: 235px
+		+bg('top.png')
+		// height: 235px
 		background-size: 100% 100% 
 		position: absolute
 		z-index: 5
